--- a/Makefile.toml
+++ b/Makefile.toml
@@ -3,6 +3,7 @@ env_scripts = [
 #!@duckscript
 # set os specific env vars
 os = os_family
+set_env OS "${os}"
 if eq ${os} windows
   set_env STANDALONE_PY_URL "${PY_BASE_URL}/cpython-3.9.7-x86_64-pc-windows-msvc-shared-pgo-20211017T1616.tar.zst"
   set_env PYTHON "${WORKSPACE}\\py39\\python.exe"
@@ -296,6 +297,17 @@ exec --fail-on-error zstd -f -d py39.tar.zst
 exec --fail-on-error tar -xvf py39.tar
 '''
 
+[tasks.install-pyside-wheels]
+env = { USE_PYTHON = { value = "${PYTHON}", condition = { env_not_set = [
+  "USE_PYTHON",
+] } }, OS_WHEEL_LABEL = { source = "${OS}", default_value = "unknown", mapping = { "linux" = "linux_x86_64", "mac" = "macosx_10_13_x86_64", "windows" = "win_amd64" } } }
+script_runner = "@duckscript"
+script = '''
+exec --fail-on-error ${USE_PYTHON} -m pip install pyside-wheels/shiboken2-5.15.2.1-5.15.2-cp39-cp39-${OS_WHEEL_LABEL}.whl
+exec --fail-on-error ${USE_PYTHON} -m pip install pyside-wheels/shiboken2_generator-5.15.2.1-5.15.2-cp39-cp39-${OS_WHEEL_LABEL}.whl
+exec --fail-on-error ${USE_PYTHON} -m pip install pyside-wheels/PySide2-5.15.2.1-5.15.2-cp39-cp39-${OS_WHEEL_LABEL}.whl
+'''
+
 [tasks.setup-builder]
 dependencies = ["get-standalone-py"]
 script_runner = "@duckscript"
@@ -309,6 +321,7 @@ cp . ../../../py39
 cd ../../../
 exec --fail-on-error ${PYTHON} ./get-pip.py
 exec --fail-on-error ${PYTHON} -m pip install wheel flit . ".[test]"
+cm_run_task install-pyside-wheels
 cm_run_task generate-resources
 '''
 
@@ -385,15 +398,13 @@ cp target/x86_64-pc-windows-msvc/release/console_backend.pdb py39-dist/Lib/site-
 '''
 
 [tasks.build-dist-install-frontend-wheel]
+env = { USE_PYTHON = "${DIST_PYTHON}" }
 dependencies = ["build-frontend-wheel"]
-command = "${DIST_PYTHON}"
-args = [
-  "-m",
-  "pip",
-  "install",
-  "./dist/swiftnav_console-0.1.0-py3-none-any.whl",
-  "--force-reinstall",
-]
+script_runner = "@duckscript"
+script = '''
+exec --fail-on-error ${DIST_PYTHON} -m pip install ./dist/swiftnav_console-0.1.0-py3-none-any.whl --force-reinstall
+cm_run_task install-pyside-wheels
+'''
 
 [tasks.build-dist-install-backend-wheel]
 dependencies = ["build-backend-wheel"]
