--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 "console_backend/tests/data/*" filter=lfs diff=lfs merge=lfs -text
 "pyside-wheels/*.whl" filter=lfs diff=lfs merge=lfs -text
+installers/Windows/NSIS/*.zip filter=lfs diff=lfs merge=lfs -text
