--- a/Makefile.toml
+++ b/Makefile.toml
@@ -765,17 +765,13 @@ mv *.deb installers/Linux/
 [tasks.install-nsis-plugin]
 script_runner = "@duckscript"
 script = '''
-inetc_filepath = set installers/Windows/NSIS/Inetc.zip
+inetc_filepath = set installers/Windows/NSIS/Plugins/x86-unicode/INetC.dll
 if not is_path_exists ${inetc_filepath}
-  mkdir installers/Windows/NSIS
-  wget -O ${inetc_filepath} https://nsis.sourceforge.io/mediawiki/images/c/c9/Inetc.zip
   exec --fail-on-error unzip -d installers/Windows/NSIS installers/Windows/NSIS/Inetc.zip
 end
-nsprocess_filepath = set installers/Windows/NSIS/NsProcess.zip
+nsprocess_filepath = set installers/Windows/NSIS/Plugin/nsProcess.dll
 if not is_path_exists ${nsprocess_filepath}
-  mkdir installers/Windows/NSIS
-  wget -O ${nsprocess_filepath} http://forums.winamp.com/attachment.php?attachmentid=54705&d=1610882327
-  exec --fail-on-error unzip -d installers/Windows/NSIS installers/Windows/NSIS/NsProcess.zip
+  exec --fail-on-error unzip -d installers/Windows/NSIS installers/Windows/NSIS/nsProcess.zip
   exec --fail-on-error mv installers/Windows/NSIS/Plugin/nsProcessW.dll installers/Windows/NSIS/Plugin/nsProcess.dll
 end
 '''
