--- a/Makefile.toml
+++ b/Makefile.toml
@@ -764,11 +764,14 @@ mv *.deb installers/Linux/
 [tasks.install-nsis-plugin]
 script_runner = "@duckscript"
 script = '''
-filepath = set installers/Windows/NSIS/Inetc.zip
-if not is_path_exists ${filepath}
-  mkdir installers/Windows/NSIS
-  wget -O ${filepath} https://nsis.sourceforge.io/mediawiki/images/c/c9/Inetc.zip
+inetc_filepath = set installers/Windows/NSIS/Plugins/x86-unicode/INetC.dll
+if not is_path_exists ${inetc_filepath}
   exec --fail-on-error unzip -d installers/Windows/NSIS installers/Windows/NSIS/Inetc.zip
+end
+nsprocess_filepath = set installers/Windows/NSIS/Plugin/nsProcess.dll
+if not is_path_exists ${nsprocess_filepath}
+  exec --fail-on-error unzip -d installers/Windows/NSIS installers/Windows/NSIS/nsProcess.zip
+  exec --fail-on-error mv installers/Windows/NSIS/Plugin/nsProcessW.dll installers/Windows/NSIS/Plugin/nsProcess.dll
 end
 '''
 
