--- a/Makefile.toml
+++ b/Makefile.toml
@@ -13,6 +13,7 @@ if eq ${os} windows
   set_env BUILD_TRIPLET "x86_64-pc-windows-msvc"
   set_env PYO3_CONFIG_FILE "${WORKSPACE}\\standalone-py\\pyo3_config.txt"
   set_env CONSOLE_PYO3_CONFIG_FILE "${WORKSPACE}\\standalone-py\\pyo3_config.txt"
+  set_env IMAGEMAGICK_PATH "${HOMEPATH}\\scoop\apps\imagemagick\current"
 elseif eq ${os} linux
   set_env STANDALONE_PY_URL "${SWFT_PY_BASE_URL}/cpython-3.9.10-x86_64-unknown-linux-gnu-pgo+lto-20220203T2103.tar.zst"
   set_env PYTHON "${WORKSPACE}/py39/bin/python3"
@@ -339,8 +340,26 @@ cd ../../..
 exec --fail-on-error ${DIST_PYTHON} ./get-pip.py
 '''
 
-[tasks.call-build-splash-bin]
-private = true
+[tasks.build-splash-version]
+script_runner = "@duckscript"
+script = '''
+output = exec --fail-on-error git describe --always --tags --dirty
+version = trim ${output.stdout}
+if is_empty "${USE_EXISTING_CONSOLE_VERSION_SPLASH}"
+  if not is_empty "${IMAGEMAGICK_PATH}"
+      exec --fail-on-error ${IMAGEMAGICK_PATH}/convert -pointsize 14 -fill "#FFA400" -gravity south -annotate +0+5 ${version} ./resources/images/splash.jpg ./resources/images/splash-version.jpg
+  else
+    assert_false "Environment variable IMAGEMAGICK_PATH must be set"
+  end
+else
+  if not is_path_exists ./resources/images/splash-version.png
+    assert_false "Console version splash did not exist, expected it to be created by CI."
+  end
+end
+'''
+
+[tasks.build-splash-bin]
+dependencies = ["build-splash-version"]
 command = "cargo"
 args = [
   "build",
@@ -352,9 +371,9 @@ args = [
   "swift-console-splash",
 ]
 
-[tasks.call-build-console-bin]
+[tasks.build-console-bin]
 private = true
-dependencies = ["call-build-splash-bin"]
+dependencies = ["build-splash-bin"]
 command = "cargo"
 args = [
   "build",
@@ -369,10 +388,10 @@ args = [
 [tasks.build-console]
 env = { PYO3_CONFIG_FILE = "${CONSOLE_PYO3_CONFIG_FILE}" }
 dependencies = ["write-pyo3-config-console"]
-run_task = "call-build-console-bin"
+run_task = "build-console-bin"
 
 [tasks.build-console.windows]
-dependencies = ["call-build-console-bin"]
+dependencies = ["build-console-bin"]
 
 [tasks.build-dist-install-console]
 dependencies = ["build-console"]
