--- a/Makefile.toml
+++ b/Makefile.toml
@@ -13,7 +13,7 @@ if eq ${os} windows
   set_env BUILD_TRIPLET "x86_64-pc-windows-msvc"
   set_env PYO3_CONFIG_FILE "${WORKSPACE}\\standalone-py\\pyo3_config.txt"
   set_env CONSOLE_PYO3_CONFIG_FILE "${WORKSPACE}\\standalone-py\\pyo3_config.txt"
-  set_env IMAGEMAGICK_PATH "${HOMEPATH}\\scoop\apps\imagemagick\current"
+  set_env IMAGEMAGICK_PATH "${HOMEPATH}\\scoop\\apps\\imagemagick\\current"
 elseif eq ${os} linux
   set_env STANDALONE_PY_URL "${SWFT_PY_BASE_URL}/cpython-3.9.10-x86_64-unknown-linux-gnu-pgo+lto-20220203T2103.tar.zst"
   set_env PYTHON "${WORKSPACE}/py39/bin/python3"
@@ -25,6 +25,7 @@ elseif eq ${os} linux
   output = exec --fail-on-error gcc -dumpmachine
   triplet = trim ${output.stdout}
   set_env BUILD_TRIPLET ${triplet}
+  set_env IMAGEMAGICK_PATH "/usr/bin"
 else
   set_env STANDALONE_PY_URL "${PY_BASE_URL}/cpython-3.9.7-x86_64-apple-darwin-pgo+lto-20211017T1616.tar.zst"
   set_env PYTHON "${WORKSPACE}/py39/bin/python3"
@@ -36,6 +37,7 @@ else
   output = exec --fail-on-error gcc -dumpmachine
   triplet = trim ${output.stdout}
   set_env BUILD_TRIPLET ${triplet}
+  set_env IMAGEMAGICK_PATH "/usr/local/bin"
 end
 ''',
 ]
