--- a/Makefile.toml
+++ b/Makefile.toml
@@ -13,7 +13,8 @@ if eq ${os} windows
   set_env BUILD_TRIPLET "x86_64-pc-windows-msvc"
   set_env PYO3_CONFIG_FILE "${WORKSPACE}\\standalone-py\\pyo3_config.txt"
   set_env CONSOLE_PYO3_CONFIG_FILE "${WORKSPACE}\\standalone-py\\pyo3_config.txt"
-  set_env IMAGEMAGICK_PATH "${HOMEPATH}\\scoop\\apps\\imagemagick\\current"
+  program_data = get_env ProgramData
+  set_env IMAGEMAGICK_PATH "${program_data}\\chocolatey\\bin"
 elseif eq ${os} linux
   set_env STANDALONE_PY_URL "${SWFT_PY_BASE_URL}/cpython-3.9.10-x86_64-unknown-linux-gnu-pgo+lto-20220203T2103.tar.zst"
   set_env PYTHON "${WORKSPACE}/py39/bin/python3"
@@ -345,7 +346,7 @@ exec --fail-on-error ${DIST_PYTHON} ./get-pip.py
 [tasks.install-imagemagick]
 
 [tasks.install-imagemagick.windows]
-script = "scoop install imagemagick"
+script = "choco install imagemagick"
 
 [tasks.install-imagemagick.linux]
 script = "sudo apt-get install imagemagick"
