--- a/Makefile.toml
+++ b/Makefile.toml
@@ -349,12 +349,13 @@ exec --fail-on-error ${DIST_PYTHON} ./get-pip.py
 script = "choco install imagemagick"
 
 [tasks.install-imagemagick.linux]
-script = "sudo apt-get install imagemagick"
+script = "sudo apt-get install fonts-freefont-otf fonts-freefont-ttf imagemagick"
 
 [tasks.install-imagemagick.mac]
 script = "brew install imagemagick"
 
 [tasks.build-splash-version]
+private = true
 script_runner = "@duckscript"
 script = '''
 output = exec --fail-on-error git describe --always --tags --dirty
@@ -367,6 +368,7 @@ end
 '''
 
 [tasks.build-splash-bin]
+private = true
 dependencies = ["build-splash-version"]
 command = "cargo"
 args = [
