--- a/Makefile.toml
+++ b/Makefile.toml
@@ -14,7 +14,6 @@ if eq ${os} windows
   set_env PYO3_CONFIG_FILE "${WORKSPACE}\\standalone-py\\pyo3_config.txt"
   set_env CONSOLE_PYO3_CONFIG_FILE "${WORKSPACE}\\standalone-py\\pyo3_config.txt"
   program_data = get_env ProgramData
-  set_env IMAGEMAGICK_PATH "${program_data}\\chocolatey\\bin"
   set_env SPLASH_FONT "arial"
 elseif eq ${os} linux
   set_env STANDALONE_PY_URL "${SWFT_PY_BASE_URL}/cpython-3.9.10-x86_64-unknown-linux-gnu-pgo+lto-20220203T2103.tar.zst"
@@ -27,7 +26,6 @@ elseif eq ${os} linux
   output = exec --fail-on-error gcc -dumpmachine
   triplet = trim ${output.stdout}
   set_env BUILD_TRIPLET ${triplet}
-  set_env IMAGEMAGICK_PATH "/usr/bin"
   set_env SPLASH_FONT "helvetica"
 else
   set_env STANDALONE_PY_URL "${PY_BASE_URL}/cpython-3.9.7-x86_64-apple-darwin-pgo+lto-20211017T1616.tar.zst"
@@ -40,7 +38,6 @@ else
   output = exec --fail-on-error gcc -dumpmachine
   triplet = trim ${output.stdout}
   set_env BUILD_TRIPLET ${triplet}
-  set_env IMAGEMAGICK_PATH "/usr/local/bin"
   set_env SPLASH_FONT "helvetica"
 end
 ''',
@@ -352,8 +349,6 @@ exec --fail-on-error ${DIST_PYTHON} ./get-pip.py
 script_runner = "@shell"
 script = '''
 choco install imagemagick
-ls $IMAGEMAGICK_PATH%
-ls "C:/Program Files/ImageMagick-7.1.0-Q16-HDRI"
 '''
 
 [tasks.install-imagemagick.linux]
@@ -367,10 +362,11 @@ script_runner = "@duckscript"
 script = '''
 output = exec --fail-on-error git describe --always --tags --dirty
 version = trim ${output.stdout}
-if not is_empty "${IMAGEMAGICK_PATH}"
-  exec --fail-on-error ${IMAGEMAGICK_PATH}/convert -font ${SPLASH_FONT} -pointsize 14 -fill "#FFA400" -gravity south -annotate +0+5 ${version} ./resources/images/splash.jpg ./resources/images/splash-version.jpg
+os = os_family
+if eq ${os} windows
+  exec --fail-on-error magick convert -font ${SPLASH_FONT} -pointsize 14 -fill "#FFA400" -gravity south -annotate +0+5 ${version} ./resources/images/splash.jpg ./resources/images/splash-version.jpg
+  exec --fail-on-error convert -font ${SPLASH_FONT} -pointsize 14 -fill "#FFA400" -gravity south -annotate +0+5 ${version} ./resources/images/splash.jpg ./resources/images/splash-version.jpg
 else
-  assert_false "Environment variable IMAGEMAGICK_PATH must be set"
 end
 '''
 
