--- a/Makefile.toml
+++ b/Makefile.toml
@@ -348,7 +348,7 @@ exec --fail-on-error ${DIST_PYTHON} ./get-pip.py
 [tasks.install-imagemagick.windows]
 script_runner = "@shell"
 script = '''
-choco install imagemagick
+choco install -y imagemagick.tool
 '''
 
 [tasks.install-imagemagick.linux]
