--- a/Makefile.toml
+++ b/Makefile.toml
@@ -346,9 +346,10 @@ exec --fail-on-error ${DIST_PYTHON} ./get-pip.py
 [tasks.install-imagemagick]
 
 [tasks.install-imagemagick.windows]
-script_runner = "@shell"
+script_runner = "@duckscript"
 script = '''
-choco install -y imagemagick.tool
+wget -O imagemagick.tool.7.1.0.nupkg https://github.com/swift-nav/swift-toolchains/releases/download/imagemagick-7.1.0/imagemagick.tool.7.1.0.nupkg
+exec --fail-on-error choco install -y ./imagemagick.tool.7.1.0.nupkg
 '''
 
 [tasks.install-imagemagick.linux]
