--- a/Makefile.toml
+++ b/Makefile.toml
@@ -346,6 +346,7 @@ args = [
   "build",
   "--release",
   "-vv",
+  "--no-default-features",
   "--features",
   "winit",
   "--bin",
@@ -360,6 +361,7 @@ args = [
   "build",
   "--release",
   "-vv",
+  "--no-default-features",
   "--features",
   "entrypoint,splash",
   "--bin",
