--- a/Makefile.toml
+++ b/Makefile.toml
@@ -415,7 +415,8 @@ cp target/release/${app_name} py39-dist/${app_name}
 cp target/release/swift-console-splash py39-dist/swift-console-splash
 os = os_family
 if eq ${os} mac
-  exec --fail-on-error install_name_tool -change /install/lib/libpython3.9.dylib @executable_path/lib/libpython3.9.dylib py39-dist/${app_name}
+  exec --fail-on-error install_name_tool -change /install/lib/libpython3.9.dylib @rpath/libpython3.9.dylib py39-dist/${app_name}
+  exec --fail-on-error install_name_tool -add_rpath @executable_path/../Resources/lib py39-dist/${app_name}
 end
 '''
 
@@ -676,10 +677,6 @@ mkdir ${contents_dir}
 mkdir ${contents_mac_os}
 exec --fail-on-error cp -r py39-dist "${contents_resources_dir}"
 exec --fail-on-error mv ./${contents_resources_dir}/${app_original_name} "./${contents_mac_os}/${app_file_prefix}"
-exec --fail-on-error mv ./${contents_resources_dir}/swift-console-splash "./${contents_mac_os}/swift-console-splash"
-exec --fail-on-error ln -s "../Resources/lib" ${contents_mac_os}/lib
-exec --fail-on-error ln -s "../Resources/.frozen" ${contents_mac_os}/.frozen
-exec --fail-on-error ln -s "../Resources/resources" ${contents_mac_os}/resources
 cp ./${info_plist_path} ./${contents_dir}/Info.plist
 mkdir ${contents_resources_dir}
 cp ${icns_path} ./${contents_resources_dir}/${app_file_prefix}.icns
