try alternate resource paths

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -417,6 +417,7 @@ os = os_family
 if eq ${os} mac
   exec --fail-on-error install_name_tool -change /install/lib/libpython3.9.dylib @rpath/libpython3.9.dylib py39-dist/${app_name}
   exec --fail-on-error install_name_tool -add_rpath @executable_path/../Resources/lib py39-dist/${app_name}
+  exec --fail-on-error install_name_tool -add_rpath @executable_path/lib py39-dist/${app_name}
 end
 '''
 
