--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -92,6 +92,11 @@ jobs:
           path: ${{ env.PIP_CACHE_DIR }}
           key: ${{ runner.os }}-pyproject-toml-${{ secrets.CACHE_VERSION }}-${{ hashFiles('pyproject.toml') }}
 
+      - name: Install ImageMagick
+        shell: bash
+        run: |
+          cargo make install-imagemagick
+
       - name: Set up python builder
         shell: bash
         run: |
@@ -159,6 +164,11 @@ jobs:
         with:
           path: ${{ env.PIP_CACHE_DIR }}
           key: ${{ runner.os }}-pyproject-toml-${{ secrets.CACHE_VERSION }}-${{ hashFiles('pyproject.toml') }}
+
+      - name: Install ImageMagick
+        shell: bash
+        run: |
+          cargo make install-imagemagick
 
       - name: Set up python builder
         run: |
